--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ html, body {
     background-image: url('https://images.unsplash.com/photo-1587563974670-b5181b459b30?q=80&w=1587&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
     width: 50%;
     height: auto;
+    max-height: 25rem;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: right;
@@ -38,8 +39,8 @@ html, body {
     text-align: center;
     font-family: 'Raleway';
     color: #bdac3b;
-    line-height: 4rem;
-    font-size: 3rem;
+    line-height: 3.5rem;
+    font-size: 2.5rem;
 }
 
 #order {
@@ -86,15 +87,18 @@ button:disabled {
 .orderResultDisplay{
     display: flex;
     flex-direction: row;
-    width: 100%;
+    width: 80%;
+    justify-content: space-evenly;
     min-height: 600px;
     border: 0;
-    margin: 0;
+    margin: auto;
+    background-color: #3524b8;
 }
 .orderReady {
     visibility: hidden;
-    margin: 1rem auto;
+    margin-top: 1rem;
     width: 50%;
+    padding: 1rem;
     background-color: #fff1e6;
     border: 1px solid black;
     border-radius: 10px;
@@ -103,7 +107,7 @@ button:disabled {
 .display {
     text-align: center;
     font-family: 'Raleway';
-    line-height: 4rem;;
+    line-height: 3rem;
     font-size: 2rem;
     color: #9b5de5;
 }
@@ -117,17 +121,18 @@ button:disabled {
 }
 
 .icecreamCone {
+    background-color: #24b85a;
     position: relative;
-    width: 20%;
+    min-width: 150px;
     height: 300px;
-    margin: auto 2rem auto auto;
+    margin-top: 10rem;
     visibility: hidden;
 }
 
 .cone {
     position: absolute;
     top: 50%;
-    right: 80%;
+    right: 0%;
     width: 0;
     height: 0;
     margin: 0 auto 50px auto;
@@ -140,7 +145,7 @@ button:disabled {
 .addScoop {
     position: absolute;
     top: 20%;
-    right: 80%;
+    right: 0%;
     width: 150px;
     height: 150px;
     background-color: #bb719f;
@@ -155,8 +160,8 @@ button:disabled {
 
 .addTopping1 {
     position: absolute;
-    top: 10%;
-    right: 80%;
+    top: 12%;
+    right: 40%;
     width: 8px;
     height: 15px;
     background-color: #eba910;
@@ -166,7 +171,7 @@ button:disabled {
 .addTopping2 {
     position: absolute;
     top: 1%;
-    right: 70%;
+    left: 25%;
     width: 8px;
     height: 15px;
     background-color: #e06fdc;
@@ -175,8 +180,8 @@ button:disabled {
 }
 .addTopping3 {
     position: absolute;
-    top: 0%;
-    right: 50%;
+    top: -1%;
+    right: 30%;
     width: 8px;
     height: 15px;
     background-color: #de7331;
@@ -185,8 +190,8 @@ button:disabled {
 }
 .addTopping4 {
     position: absolute;
-    top: 10%;
-    right: 65%;
+    top: 13%;
+    left: 35%;
     width: 8px;
     height: 15px;
     background-color: #258f9d;
@@ -195,8 +200,8 @@ button:disabled {
 }
 .addTopping5 {
     position: absolute;
-    top: 10%;
-    right: 22%;
+    top: 15%;
+    right: 20%;
     width: 8px;
     height: 15px;
     background-color: #24b85a;
@@ -206,8 +211,8 @@ button:disabled {
 
 .addTopping6 {
     position: absolute;
-    top: 1%;
-    right: 33%;
+    top: 10%;
+    left: 20%;
     width: 8px;
     height: 15px;
     background-color: #bb2424;
@@ -217,8 +222,8 @@ button:disabled {
 
 .addTopping7 {
     position: absolute;
-    top: 15%;
-    right: 37%;
+    top: 1%;
+    left: 40%;
     width: 8px;
     height: 15px;
     background-color: #d6cde3;
@@ -228,8 +233,8 @@ button:disabled {
 
 .addTopping8 {
     position: absolute;
-    top: 15%;
-    right: 50%;
+    top: -1%;
+    right: 40%;
     width: 8px;
     height: 15px;
     background-color: #3443b6;
@@ -245,6 +250,22 @@ button:disabled {
     font-weight: 700;
 }
 
+@media only screen and (max-width: 1000px){
+    .instructions_content {
+        font-size: 2.5rem;
+        line-height: 2.5rem;
+    }
+    .display {
+        font-size: 1.5rem;
+        line-height: 1.7rem;
+    }
+    .result {
+        font-size: 2.5rem;
+    }
+    .orderText {
+        font-size: 1.5rem;
+    }
+}
 
 
 
