--- a/styles.css
+++ b/styles.css
@@ -92,6 +92,7 @@ button:disabled {
     min-height: 600px;
     border: 0;
     margin: auto;
+    background-color: #72ddf7;
 }
 .orderReady {
     visibility: hidden;
